...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.title}"
                android:textSize="30sp"
                tools:text="Title" />

        </LinearLayout>

        <ImageView
            android:id="@+id/detailed_item_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/item_image_description"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/itemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.categoryString}"
            android:textSize="25sp"
            tools:text="Category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/display_price(item.price)}"
                android:textSize="18sp"
                tools:text="10.00" />

...

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/detailedItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/display_quantity(item.quantity)}"
                android:textSize="18sp" />

        </LinearLayout>
...
                android:textSize="18sp"
                tools:ignore="RtlSymmetry"
                tools:text="Posted by" />


            <Button
                android:id="@+id/itemPostedBy"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@{username}"
                android:textColor="@color/themeColor"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{sellerVisibility}">

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/buy"
                app:layout_constraintEnd_toEndOf="@+id/cardInputWidget"
                app:layout_constraintStart_toStartOf="@+id/cardInputWidget"
                app:layout_constraintTop_toBottomOf="@+id/cardInputWidget" />

            <EditText
                android:id="@+id/buyQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/_1"
                android:hint="@string/_1"
                android:inputType="number"
...
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="@{ratingVisibility}"
                tools:ignore="UselessParent">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/rate_left_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:gravity="center"
...
                    android:paddingHorizontal="20dp"
                    android:text="4"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/rate_right_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:gravity="center"
...
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />

            </RadioGroup>

            <Button
                android:id="@+id/ratingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_rating"
                android:visibility="@{ratingVisibility}" />

        </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addToWishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_wishlist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/shareButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49" />

...
