...
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="2">

                        <ImageButton
                            android:id="@+id/item_take_picture"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_weight="2"
                            android:contentDescription="@string/item_image_description"
                            android:src="@android:drawable/ic_menu_camera"
                            android:translationZ="1dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/item_image"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/item_open_gallery"
                            android:layout_width="64dp"
...

                    <Space
                        android:layout_width="30dp"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/themeColor"
                        android:entries="@array/categories" />

                </LinearLayout>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:text="@={quantity}" />

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/saveItemButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{isNewItem ? @string/create_item : @string/edit}"
                        tools:text="@string/create_item" />
                </LinearLayout>

...
