<resources>
    <string name="app_name">Sharingang</string>
    <string name="new_item">New Item</string>
    <string name="description">Description</string>
    <string name="create_item">Create Item</string>
    <string name="go_to_map">Go to Map</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="display_price">CHF %.2f</string>
    <string name="display_quantity">Quantity: %d</string>
    <string name="item_image_description">Item Image</string>
    <string name="search_hint">Search…</string>
    <string name="search_go_button">Go</string>
    <string name="sell">Sell</string>
    <string name="unsell">Resell</string>
    <string name="get_location">Get Location</string>
    <string name="user_profile">User Profile</string>
    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="clear_search_button">Clear search</string>
    <string name="share">Share</string>
    <string name="txt_user_profile_picture">User Profile Picture</string>
    <string name="add_wishlist">Add to Wishlist</string>
    <string name="remove_wishlist">Remove from Wishlist</string>
    <string name="wishlist_menu_title">Wish List</string>
    <string name="enter_address">Enter Address</string>
    <string name="item">Item</string>
    <string name="userNotLoggedInInfo">You need to be logged in to view your User Profile.</string>
    <string name="userNotLoggedInCreateItem">You need to be logged in to create an item.</string>
    <string name="userNotLoggedInWishlist">You need to be logged in to access the wishlist.</string>
    <string name="default_rating">No Ratings</string>
    <string name="apply_rating">Rate</string>
    <string-array name="categories">
        <item>None</item>
        <item>Book</item>
        <item>Electronics</item>
        <item>Games</item>
        <item>Clothes</item>
        <item>Miscellaneous</item>
    </string-array>
    <string name="report_user">Report User</string>
    <string name="inappropriate_username">Inappropriate Username</string>
    <string name="inappropriate_profile_picture">Inappropriate Profile Picture</string>
    <string name="inappropriate_item">Inappropriate Item</string>
    <string name="other">Other</string>
    <string name="hint_report_description">Provide a description for the report (optional)</string>
    <string name="eng_inappropriate_username">Inappropriate Username</string>
    <string name="eng_inappropriate_profile_picture">Inappropriate Profile Picture</string>
    <string name="eng_inappropriate_item">Inappropriate Item</string>
    <string name="eng_other">Other</string>
    <string name="eng_reporting">Reporting</string>
    <string name="i_feel_lucky">I Feel Lucky</string>
    <string name="item_save_success">Item saved successfully.</string>
    <string name="item_save_failure">Cannot save the item.</string>
    <string name="item_deleted_success">Item deleted successfully.</string>
    <string name="posted_by">Posted by</string>
    <string name="posterUsername">%1$s</string>
    <string-array name="order_categories">
        <item>Date</item>
        <item>Price</item>
        <item>Name</item>
        <item>Category</item>
    </string-array>
    <string name="sort">Sort</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string-array name="order_ascending_descending">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="chats_title">Chats</string>
    <string name="username">Username</string>
    <string name="profilePicture">profilePicture</string>
    <string name="logged_out_user_info_chat">You need to be logged in to chat.</string>
    <string name="messageHint">Your message…</string>
    <string name="chat">Chat</string>
    <string name="new_item_notification_message">A new item has been posted!</string>
    <string name="new_item_notification_channel_description">You receive a notification when a new item that is a category you subscribed to is posted.</string>
    <string name="chat_notification_channel_description">You receive a notification when another user sends you a message.</string>
    <string name="not_subscribed">You are not subscribed to any category yet!</string>
    <string name="see_subscriptions">See subscriptions</string>
    <string name="sold">Sold</string>
    <string name="subscribed_to">You are subscribed to these categories:\u0020</string>
    <string name="is_request">Is it a request?</string>
    <string name="offers">Offers</string>
    <string name="requests">Requests</string>
    <string name="message">message</string>
    <string name="buy">Buy</string>
    <string name="sold_list_title">Sold List</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="category">Category:</string>
    <string name="required_field">Required field</string>
    <string name="locate_item">Locate Item</string>
    <string name="num_unread">numUnread</string>
    <string name="open_camera">Open Camera</string>
    <string name="is_discount">Discount?</string>
    <string name="discount_lower">Discount price must be lower</string>
    <string name="lastUpdate">lastUpdate</string>
    <string name="eng_seconds">s</string>
    <string name="eng_minutes">min</string>
    <string name="eng_hours">hours</string>
    <string name="eng_days">d</string>
    <string name="eng_weeks">w</string>
    <string name="eng_months">mon</string>
    <string name="eng_years">y</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="incorrect_quantity">Incorrect Quantity Selected</string>
    <string name="discounts">Discounts</string>
    <string name="sold_button">Sold</string>
    <string name="bought_button">Purchased</string>
    <string name="message_time">Time</string>
    <string name="eng_jan">Jan</string>
    <string name="eng_feb">Feb</string>
    <string name="eng_mar">Mar</string>
    <string name="eng_apr">Apr</string>
    <string name="eng_may">May</string>
    <string name="eng_jun">Jun</string>
    <string name="eng_jul">Jul</string>
    <string name="eng_aug">Aug</string>
    <string name="eng_sep">Sep</string>
    <string name="eng_oct">Oct</string>
    <string name="eng_nov">Nov</string>
    <string name="eng_dec">Dec</string>
    <string name="eng_today">Today%s</string>
    <string name="block_user">Block User</string>
    <string name="hint_block_description">Why are you blocking this user? (optional)</string>
    <string name="rude">Rudeness</string>
    <string name="scamming">Scamming</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="blockingInformation">Note: After the block is issued, this user will not be able to send you messages or buy your items. They will be hidden from your chats as well. You can unblock them anytime in the Blocked Users tab.</string>
    <string name="unblock">unblock</string>
</resources>
